# appeer

./: .gitignore  PoP.json  README.md  README.rst  pyproject.toml
request/: request.py
src/appeer/: __init__.py  __main__.py  config.py  datadir.py  initialize.py  log.py  request.py  scrape.py  utils.py
src/appeer/cli/: __init__.py  cmd_cjob.py  cmd_clean.py  cmd_commit.py  cmd_config.py  cmd_init.py  cmd_parse.py  cmd_pdb.py  cmd_pjob.py  cmd_pub.py  cmd_scrape.py  cmd_sdb.py  cmd_sjob.py
src/appeer/cmdline/: __init__.py  cmd_clean.py  cmd_config.py  cmd_init.py  cmd_parse.py  cmd_pdb.py  cmd_scrape.py  cmd_sdb.py
src/appeer/commit/: __init__.py  clean_commit_jobs.py  commit_action.py  commit_job.py  commit_packer.py  commit_reports.py  commit_scripts.py
src/appeer/db/: __init__.py  db.py  jobs_db.py  parse_db.py  pub_db.py  pubs_db.py  scrape_db.py  table.py
src/appeer/db/tables/: __init__.py  action_table.py  commit_jobs.py  commits.py  job_table.py  parse_jobs.py  parses.py  pub.py  pubs.py  registered_tables.py  scrape_jobs.py  scrapes.py  table.py
src/appeer/general/: __init__.py  config.py  datadir.py  initialize.py  log.py  utils.py
src/appeer/jobs/: __init__.py  action.py  db_properties.py  job.py
src/appeer/journals/: __init__.py  journals_info.py
src/appeer/parse/: __init__.py  clean_parse_jobs.py  default_metadata.py  initialize_parse_job.py  parse_action.py  parse_automatic.py  parse_job.py  parse_packer.py  parse_reports.py  parse_scripts.py  parsing_flow.py  reports.py
src/appeer/parse/parsers/: __init__.py  date_utils.py  implemented_parsers.json  parser.py  preparser.py  publishers_index.json  soup_utils.py
src/appeer/parse/parsers/NAT/: NAT_journals.json  __init__.py  parser_NAT_ANY_txt.py
src/appeer/parse/parsers/RSC/: RSC_journals.json  __init__.py  parser_RSC_ANY.py  parser_RSC_ANY_txt.py
src/appeer/parse/parsers/templates/: PUBLISHER_journals.json  __init__.py  make_PUBLISHER_journals.py  parser_PUBLISHER_JOURNAL_txt.py
src/appeer/pub/: __init__.py  status.py
src/appeer/scrape/: __init__.py  clean_scrape_job.py  clean_scrape_jobs.py  input_handling.py  reports.py  request.py  scrape.py  scrape_action.py  scrape_job.py  scrape_plan.py  scrape_reports.py  scrape_scripts.py  scraper.py  scrapers.py
src/appeer/scrape/strategies/: DSM.json  SMM.json  __init__.py  mapping.py  scrape_plan.py
src/appeer/tests/: conftest.py  test_log.py  test_scrape.py  test_utils.py
src/appeer/tests/sample_data/: PoP.json  example_publications.txt
