[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'appeer'
version = '0.0.1'
authors = [
    {name = 'Juraj OvÄar', email = 'juraj.ovcar@gmail.com'},
]
description = 'appeer: statistics of the length of peer review'
readme = 'README.rst'
requires-python = '>=3.10'
keywords = ['appeer', 'peer', 'review', 'length']
license = {text = 'GPL-3.0-only'}
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: GNU General Public License version 3',
]
dependencies = [
    'requests',
    'importlib-metadata; python_version>="3.10"',
    'platformdirs',
    'click'
]

[project.scripts]
appeer = 'appeer.__main__:appeer_cli'

[project.optional-dependencies]
test = ['pytest>=6.0', 'pytest-cov']

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '--cov -rs'

[tool.setuptools.dynamic]
version = {attr = 'appeer.__version__'}
