[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'appeer'
version = '0.0.1'
authors = [
    {name = 'Juraj OvÄar', email = 'juraj.ovcar@gmail.com'},
]
description = 'appeer: statistics of the length of peer review'
readme = 'README.rst'
requires-python = '>=3.13'
keywords = ['appeer', 'peer', 'review', 'length']
license = {text = 'GPL-3.0-only'}
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: GNU General Public License version 3',
]
dependencies = [
    'importlib-metadata; python_version>="3.13"',
    'requests',
    'platformdirs',
    'click'
]

[project.scripts]
appeer = 'appeer.cli:appeer_cli'

[project.optional-dependencies]
test = ['pytest>=6.0', 'pytest-cov']

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '--cov -rs'

[tool.setuptools.dynamic]
version = {attr = 'appeer.__version__'}
